--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,19 @@
 /Chapter_13/colorSelector
 /Chapter_13/PythonColorSelectorUI/venv
 /Chapter_14/TaskCreation_CMSIS_RTOSv2
+Chapters5_6/.cproject
+Chapters5_6/.settings/language.settings.xml
+Chapter_7/.cproject
+Chapter_7/.settings/language.settings.xml
+Chapter_8/.cproject
+Chapter_8/.settings/language.settings.xml
+Chapter_9/.cproject
+Chapter_9/.settings/language.settings.xml
+Chapter_10/.cproject
+Chapter_11/.cproject
+Chapter_12/.cproject
+Chapter_13/.cproject
+Chapter_14/.cproject
+Chapter_14/.settings/language.settings.xml
+Chapter_15/.cproject
+Chapter_15/.settings/language.settings.xml
